--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "saviotsui.github.io",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "saviotsui.github.io",
   "scripts": {
     "build": "gatsby build",
     "deploy": "gatsby build && gh-pages -d public -b master",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "yarn run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,14 +24,29 @@
   "homepage": "https://github.com/saviotsui/saviotsui.github.io#readme",
   "dependencies": {
     "acorn": "^6.4.1",
+    "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.21.22",
+    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-plugin-typography": "^2.5.10",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-is": "^16.13.1",
     "react-refresh": "^0.8.3",
-    "typescript": "^3.9.7"
+    "react-typography": "^0.16.19",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.7",
+    "typography": "^0.16.19",
+    "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "prettier": "2.0.5"
+  },
+  "resolutions": {
+    "styled-components": "^5"
+  },
+  "engines": {
+    "node": ">=12"
   }
 }
