--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "acorn": "^6.4.1",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.21.22",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typography": "^2.5.10",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-is": "^16.13.1",
     "react-refresh": "^0.8.3",
     "react-typography": "^0.16.19",
