--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.21.22",
     "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-robots-txt": "^1.5.1",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typography": "^2.5.10",
     "prop-types": "^15.7.2",
